# backend

./: .env.dist  .gitignore  Dockerfile  conftest.py  pyproject.toml  run-api.sh  sonar-project.properties
.github/workflows/: build.yml  codeql-analysis.yml
dacot_models/dacot_models/: models.py
export-agent/scripts/: LoadDataFromUOCT.py
fastapi_backend/app/: complex_operations.py  config.py  control_operations.py  graphql_models.py  graphql_mutations.py  graphql_queries.py  graphql_schema.py  graphql_schema_old.py  jobs_sched.py  main.py  telnet_command_executor.py
fastapi_backend/app/email_templates/: new_accepted.html  new_created.html  new_rejected.html  update_accepted.html  update_created.html  update_rejected.html
tests/: test_1user_mutations.py  test_2company_mutations.py  test_3controller_mutations.py  test_4graphql_models.py  test_5queries.py  test_print.py  test_user_mutations.py
